@@ -25,6 +25,8 @@
 #ifndef __WZD_SERVER_THREAD__
 #define __WZD_SERVER_THREAD__
 
+int context_remove(List * context_list, wzd_context_t * context);
+
 int runMainThread(int argc, char **argv);
 
 #endif /* __WZD_SERVER_THREAD__ */
